# sample-decay-dose

./: AGENS.md  LICENSE  README.md  SKILLS.md  pyproject.toml  requirements.txt  setup.cfg
examples/: README.md  al_irr_dose.py  calc_f71_doses.py  calc_f71_doses_decaytime.py  calc_f71_doses_mass.py  calc_f71_storage_tank_doses.py  calc_f71_tank_doses.py  calc_irradiation_doses.py  calc_irradiation_doses_decaytime.py  co_steel_irr_doses.py  co_steel_irr_plot_gamma.py  decay_atoms_cvs.py  decay_atoms_noshield.py  flibe_doseplot.py  flibe_irr_dose.py  fuelsalt_doseplot.py  fuelsalt_doses_decaytime.py  plot_doses.py  shielded_sample_dose.py  storage_tank_doses_scan.py  storage_tank_doses_scan_parallel.py  storage_tank_doses_scan_parallel_noshield.py  storage_tank_plots.py
examples/Nash_flibe/: README.md  lif_coa2.py
examples/aluminum/: README.md  al_doseplot.py  al_irr_dose.py
examples/co_stellite/: README.md  co_steel_irr_doses.py  co_steel_irr_doses_shield.py  co_steel_irr_hcdoses_shield.py  co_steel_irr_hcdoses_shield_pb.py  pb_steel_irr_plot_hcdoses_gamma.py  steel_irr_plot_gamma.py  steel_irr_plot_hcdoses_gamma.py  stell_irr_doses.py  stell_irr_plot_gamma.py
examples/cobalt_steel/: README.md  co_steel_irr_doses.py  co_steel_irr_plot_gamma.py
examples/flibe_salt/: README.md  flibe_irr_dose.py
examples/hotcell/: README.md  leadcell-plots.py  leadcell.py
examples/irradiator/: README.md  irradiator.py
examples/pipe_gas/: README.md  dose_plot.py  immediate_doses.py  (+1 more)
leaky_box_origen/: AnalysisRerun.py  BoxF71.py  BoxF71_OLD.py  Case1F71DecaySeries.py  LeakyBox.py  README.md  extract_fgr11_dcf.py
play/: PaSep-ThEIRENE.py  README.md  origen-ThEIRENE.py  read_mediso.py  th-irrad.py
sample-decay-dose/: DoseF71.py  __init__.py
sample_decay_dose/: DoseF71.py  FluorideSaltMixer.py  HotCell.py  README.md  Radiator.py  SampleDose.py  ValencyMapper.py  __init__.py  calc_doses.py  calc_doses_decaytime.py  calc_doses_mass.py  constants.py  download_NIST_nuclide_data.py  isotopes.py  plot_doses.py  read_opus.py  utils.py
sample_decay_dose/gw_exe/: README.md  __init__.py  scalerte_ssh_agent.py  scalerte_ssh_client.py  setup.cfg
test/: README.md  test_Case1F71DecaySeries.py  test_FlurideSaltMixerr.py  test_LeakyBox.py  test_SampleDose.py
(+8 files in other folders)
