[metadata]
name = sample-decay-dose
version = 0.0.1
authors = [
  { name="Ondrej Chvala", email="ochvala@utexas.edu" },
]
description = Calculate a dose from a decaying sample using SCALE
license = MIT
keywords = health physics, dose, SCALE
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
install_requires =
    numpy
    python_version >= "3.6"

[project.urls]
"Homepage" = "https://github.com/ondrejch/sample-decay-dose"
"Bug Tracker" = "https://github.com/ondrejch/sample-decay-dose/issues"

