[metadata]
name = sample_decay_dose
version = 0.0.3
author = Ondrej Chvala
author_email = ochvala@utexas.edu
url = https://github.com/ondrejch/sample-decay-dose
description = Calculate a dose from a decaying sample using SCALE
license = MIT
keywords = health physics, dose, SCALE
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
install_requires =
    numpy

[project.urls]
"Homepage" = "https://github.com/ondrejch/sample-decay-dose"
"Bug Tracker" = "https://github.com/ondrejch/sample-decay-dose/issues"
