[metadata]
name = sample_decay_dose
version = 0.1.0
author = Ondrej Chvala
author_email = ochvala@utexas.edu
url = https://github.com/ondrejch/sample-decay-dose
description = Calculate a dose from a decaying sample using SCALE
license = MIT
keywords = health physics, dose, SCALE
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:
install_requires =
    numpy
    joblib
    pandas>=2.2
    xlsxwriter>=3.0.5
    jinja2>=3.1.2
    numexpr>=2.8.4
    bottleneck>=1.3.6

[project.urls]
"Homepage" = "https://github.com/ondrejch/sample-decay-dose"
"Bug Tracker" = "https://github.com/ondrejch/sample-decay-dose/issues"
