[metadata]
name = scalerte_ssh_gw_exe
version = 0.1.0
description = SSH-native scalerte gateway executables
license = MIT

[options]
python_requires = >=3.10

[options.entry_points]
console_scripts =
    scalerte-ssh-agent = sample_decay_dose.gw_exe.scalerte_ssh_agent:main
    scalerte-ssh = sample_decay_dose.gw_exe.scalerte_ssh_client:main
